--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Maven
+.mvn/
+mvnw
+mvnw.cmd
+
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
 # Compiled class file
 *.class
 
